# thomasbach-dev.github.io

./: .gitignore  LICENSE  about.org  cabal.project  contact.org  flake.nix  index.html  index.org  thomasbach-dev.cabal  thomasbach-dev.nix
.github/workflows/: test.yml
_site/: about.html  contact.html
app/: Main.hs
css/: default.hs
docs/: CNAME  about.html  archive.html  contact.html  index.html
docs/css/: default.css
docs/posts/: 2020-04-03-website-init.html  2021-08-26-nixos-haskell-emacs-lsp.html  2021-11-15-textual-representation-with-witch.html
posts/: 2021-08-26-nixos-haskell-emacs-lsp.org  2021-11-15-textual-representation-with-witch.org  2023-05-30-using-github-actions.org  2024-01-01-setting-up-a-binary-cache.org  2024-01-11-epdb.org  _2021-08-17-nix-asterius.org
snippets/TextualRepresentationWithWitch/: Example1.hs  Example2.hs
static/: info-at-thomasbach-dev.pub
templates/: default.html
