cabal-version:      3.0
name:               thomasbach-dev
version:            0.1.0.0
synopsis:           My website

-- A longer description of the package.
-- description:
homepage:           https://thomasbach.dev/

-- A URL where users can report bugs.
bug-reports:        https://github.com/thomasbach-dev/thomasbach-dev.github.io/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

executable thomasbach-dev
    main-is:        Main.hs
    build-depends:  base ^>=4.14
                  , hakyll ^>=4.14
    hs-source-dirs: app
    default-language: Haskell2010
    default-extensions: OverloadedStrings
