cabal-version:      3.0
name:               thomasbach-dev
version:            0.1.0.0
synopsis:           My website

-- A longer description of the package.
-- description:
homepage:           https://thomasbach.dev/

-- A URL where users can report bugs.
bug-reports:        https://github.com/thomasbach-dev/thomasbach-dev.github.io/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

common general-settings
    build-depends:  base
                  , text
                  , witch
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , MultiParamTypeClasses
                      , OverloadedStrings
                      , RankNTypes
                      , ScopedTypeVariables
                      , TypeApplications
    ghc-options:    -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wno-orphans                      
                       
executable thomasbach-dev
    import:         general-settings
    main-is:        Main.hs
    build-depends:  hakyll >= 4.15
    hs-source-dirs: app
